Issue #3551, remove spacing between collated sections w/o titles

--- a/css/ccap-entrepreneurship.css
+++ b/css/ccap-entrepreneurship.css
@@ -3339,7 +3339,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.key-terms .section .title .cnx-gentext-t {
+.cnx-eoc.key-terms .section .title {
   display: none;
 }
 .cnx-eoc.assessment-questions > .title {
@@ -3414,7 +3414,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.references .section .title .cnx-gentext-t {
+.cnx-eoc.references .section .title {
   display: none;
 }
 .cnx-eoc.figure-credits > .title {
@@ -3435,7 +3435,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.figure-credits .section .title .cnx-gentext-t {
+.cnx-eoc.figure-credits .section .title {
   display: none;
 }
 .cnx-eoc.cnx-solutions {
@@ -3488,7 +3488,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.critical-thinking .section .title .cnx-gentext-t {
+.cnx-eoc.critical-thinking .section .title {
   display: none;
 }
 /* -------------------------
@@ -4173,7 +4173,7 @@ div.toc li.toc-part a.target-part::before {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.review-questions .section .title .cnx-gentext-t {
+.cnx-eoc.review-questions .section .title {
   display: none;
 }
 .cnx-eoc.discussion-questions > .title {
@@ -4194,7 +4194,7 @@ div.toc li.toc-part a.target-part::before {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.discussion-questions .section .title .cnx-gentext-t {
+.cnx-eoc.discussion-questions .section .title {
   display: none;
 }
 .cnx-eoc.case-questions > .title {
@@ -4215,7 +4215,7 @@ div.toc li.toc-part a.target-part::before {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.case-questions .section .title .cnx-gentext-t {
+.cnx-eoc.case-questions .section .title {
   display: none;
 }
 /* Hide the EOB references */
