--- a/css/ccap-principles-management.css
+++ b/css/ccap-principles-management.css
@@ -3352,7 +3352,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.key-terms .section .title .cnx-gentext-t {
+.cnx-eoc.key-terms .section .title {
   display: none;
 }
 .cnx-eoc.assessment-questions > .title {
@@ -3427,7 +3427,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.references .section .title .cnx-gentext-t {
+.cnx-eoc.references .section .title {
   display: none;
 }
 .cnx-eoc.figure-credits > .title {
@@ -3448,7 +3448,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.figure-credits .section .title .cnx-gentext-t {
+.cnx-eoc.figure-credits .section .title {
   display: none;
 }
 .cnx-eoc.cnx-solutions {
@@ -3501,7 +3501,7 @@ div.book div.chapter > div.cnx-eoc.references {
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.critical-thinking .section .title .cnx-gentext-t {
+.cnx-eoc.critical-thinking .section .title {
   display: none;
 }
 /* -------------------------
@@ -4136,7 +4136,7 @@ div.section.learning-outcomes div.orderedlist ol li.listitem > p:first-child > s
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.chapter-review .section .title .cnx-gentext-t {
+.cnx-eoc.chapter-review .section .title {
   display: none;
 }
 .cnx-eoc.manage-skills > .title {
@@ -4157,7 +4157,7 @@ div.section.learning-outcomes div.orderedlist ol li.listitem > p:first-child > s
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.manage-skills .section .title .cnx-gentext-t {
+.cnx-eoc.manage-skills .section .title {
   display: none;
 }
 .cnx-eoc.manage-exercises > .title {
@@ -4178,7 +4178,7 @@ div.section.learning-outcomes div.orderedlist ol li.listitem > p:first-child > s
   margin-left: 0;
   padding-left: 0;
 }
-.cnx-eoc.manage-exercises .section .title .cnx-gentext-t {
+.cnx-eoc.manage-exercises .section .title {
   display: none;
 }
 /* -------------------------
